--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<groupId>com.thihy</groupId>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cc-analysis</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>jar</packaging>
 
 	<name>CC Analysis</name>
@@ -54,12 +54,6 @@
 		<developerConnection>scm:git:git@github.com:thihy/cc-analysis.git</developerConnection>
 		<url>git@github.com:thihy/cc-analysis.git</url>
 	</scm>
-	<repositories>
-		<repository>
-			<id>Codehaus Snapshots</id>
-			<url>http://repository.codehaus.org/</url>
-		</repository>
-	</repositories>
 
 	<properties>
 		<elasticsearch.version>1.4.2</elasticsearch.version>
