--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<groupId>com.thihy</groupId>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cc-analysis</artifactId>
-	<version>0.1.0</version>
+	<version>0.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>CC Analysis</name>
